# dash

./: .gitignore  CMakeLists.txt  build.cov.sh  build.dev.sh  build.mic.sh  build.minimal.sh  build.nasty.sh  build.sh
dart-if/: CMakeLists.txt
dart-if/include/dash/dart/if/: dart_types.h
dash/include/dash/: Matrix.h
dash/test/: TeamLocalityTest.h
